
Release 5.2.1 (unreleased)
==========================

Bug fixes
---------

- Lagrangian module: fix particle flow rate per class reporting in listing file
  (GitHub issue #4).

- GUI: fix failure to cleanly stop running computations on some
  systems (Mantis issue #242).

- Rewrite pressure correction in pressure increment (fix computation of
  pressure L2 residual if nterup > 1).

- Fix minor bug in the verification step (wrong format for the error message).

- Fix bug in initialization of the wall condensation model.

- Fix crash in restart using coupled RSM model from non-RSM computation
  (issue #252).

- Radiative model: fix radiative flux values at parallel boundaries.

Release 5.2.0 (March 30 2018)
=============================

Physical modelling
------------------

- Atmospheric model: add new BCs for open-boundary flow such as atmospheric
  flows. It consists in changing the solved pressure. This change result
  in adding a (constant over space) momentum source terme. This momentum
  source term is designed to reach a target bulk momentum.
  The solved pressure has a zero Dirichlet as BC in case of constant
  density. In case of dry atmosphere, an hydrostatic pressure is
  pre-computed and imposed as BC.

- Turbomachinery module:
  * Improved legacy coupling-based turbomachinery option, frozen rotor
    is now also possible.
  * Allow time-varying rotor velocity for turbomachinery.
  * Account for Smirnov and Menter (ASME, 2009) modifications of Spalart-Shur eddy
    viscosity correction for rotation and curvature

- Add internal coupling for vector quantities (e.g. for plasma - weldpool monolitic
  coupling)

- Make compatible Volume Of Fluid algorithm and option iphydr, improving face
  pressure interpolation by taking into account hydrostatic pressure gradient.

Numerics
--------

- Add the possibility to put buoyant scalars and density update in
  velocity-pressure loop.

- Integration of a vector Laplacian for CDO-Fb schemes

User changes